--- a/.env
+++ b/.env
@@ -25,6 +25,13 @@ APP_SECRET=1f9d1dce56b24cafda3f370250f39b82
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7&charset=utf8mb4"
 # DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&charset=utf8"
-DATABASE_URL="mysql://root:root@mysql:3306/calendo?serverVersion=5.7&charset=utf8mb4"
+DATABASE_URL="mysql://root:root@127.0.0.1:3306/calendo?serverVersion=5.7&charset=utf8mb4"
 ###< doctrine/doctrine-bundle ###
 
+
+###> symfony/mailer ###
+# MAILER_DSN=null://null
+# MAILER_DSN=sendmail://default
+MAILER_DSN=smtp://abarsi89%40gmail.com:tlsoehyjwgimowav@smtp.gmail.com:465
+#MAILER_DSN=smtp://adam_barsi%40freesmtpservers.com:@smtp.freesmtpservers.com:25
+###< symfony/mailer ###
