--- a/composer.json
+++ b/composer.json
@@ -15,11 +15,15 @@
         "symfony/flex": "^1.17|^2",
         "symfony/form": "5.4.*",
         "symfony/framework-bundle": "*",
+        "symfony/mailer": "5.4.*",
         "symfony/proxy-manager-bridge": "5.4.*",
         "symfony/runtime": "*",
+        "symfony/security-bundle": "5.4.*",
         "symfony/twig-bundle": "5.4.*",
         "symfony/uid": "5.4.*",
-        "symfony/yaml": "*"
+        "symfony/validator": "5.4.*",
+        "symfony/yaml": "*",
+        "symfonycasts/verify-email-bundle": "^1.10"
     },
     "config": {
         "allow-plugins": {
@@ -70,6 +74,8 @@
         }
     },
     "require-dev": {
-        "symfony/maker-bundle": "^1.43"
+        "symfony/maker-bundle": "^1.43",
+        "symfony/stopwatch": "5.4.*",
+        "symfony/web-profiler-bundle": "5.4.*"
     }
 }
