--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -31,12 +31,34 @@ user:
     controller: App\Controller\UserController::index
     methods:    GET|HEAD
 
-user_create:
-    path:       /user_create
-    controller: App\Controller\UserController::createUser
-    methods:    PUT
+#user_create:
+#    path:       /user_create
+#    controller: App\Controller\UserController::createUser
+#    methods:    PUT
 
 user_show:
     path:       /user_show/{id}
     controller: App\Controller\UserController::showUser
     methods:    GET
+
+# Vendor routes:
+vendor_index:
+    path:       /vendor
+    controller: App\Controller\VendorController::index
+    methods:    GET
+vendor_new:
+    path:       /vendor/new
+    controller: App\Controller\VendorController::new
+    methods:    GET|POST
+vendor_show:
+    path:       /vendor/{vendor}
+    controller: App\Controller\VendorController::show
+    methods:    GET
+vendor_edit:
+    path:       /vendor/{vendor}/edit
+    controller: App\Controller\VendorController::edit
+    methods:    GET|POST
+vendor_delete:
+    path:       /vendor/{vendor}
+    controller: App\Controller\VendorController::delete
+    methods:    POST
