--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "sensio/framework-extra-bundle": "^6.2",
         "symfony/console": "*",
         "symfony/dotenv": "*",
+        "symfony/expression-language": "5.4.*",
         "symfony/flex": "^1.17|^2",
         "symfony/form": "5.4.*",
         "symfony/framework-bundle": "*",
