--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -37,17 +37,24 @@ security:
             logout:
                 path:   logout
                 # where to redirect after logout
-                # target: app_any_route
+                target: login
+
+            access_denied_handler: App\Security\AccessDeniedHandler
 
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
+        - { path: ^/role, roles: ROLE_SUPERADMIN }
+        - { path: ^/vendor, roles: ROLE_ADMIN }
+        - { path: ^/user, roles: [ ROLE_ADMIN, ROLE_CUSTOMER ] }
 
     role_hierarchy:
+        ROLE_CUSTOMER: ROLE_USER
         ROLE_ADMIN: ROLE_USER
-        ROLE_SUPER_ADMIN: [ ROLE_ADMIN, ROLE_ALLOWED_TO_SWITCH ]
+        ROLE_SUPERADMIN: [ ROLE_ADMIN, ROLE_CUSTOMER ]
+#        ROLE_SUPER_ADMIN: [ ROLE_ADMIN, ROLE_ALLOWED_TO_SWITCH ]
 
 when@test:
     security:
