--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -26,20 +26,27 @@ email_verification:
     controller: App\Controller\RegistrationController::verifyUserEmail
     methods:    GET|POST
 
-user:
+# User routes:
+user_index:
     path:       /user
     controller: App\Controller\UserController::index
     methods:    GET|HEAD
-
-#user_create:
-#    path:       /user_create
-#    controller: App\Controller\UserController::createUser
-#    methods:    PUT
-
+user_new:
+    path:       /user/new
+    controller: App\Controller\UserController::new
+    methods:    GET|POST
 user_show:
-    path:       /user_show/{id}
-    controller: App\Controller\UserController::showUser
+    path:       /user/{user}
+    controller: App\Controller\UserController::show
     methods:    GET
+user_edit:
+    path:       /user/{user}/edit
+    controller: App\Controller\UserController::edit
+    methods:    GET|POST
+user_delete:
+    path:       /user/{user}
+    controller: App\Controller\UserController::delete
+    methods:    POST
 
 # Vendor routes:
 vendor_index:
