--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -47,7 +47,7 @@ security:
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
         - { path: ^/role, roles: ROLE_SUPERADMIN }
-        # - { path: ^/vendor, roles: ROLE_ADMIN }
+        - { path: ^/vendor, roles: [ ROLE_ADMIN, ROLE_CUSTOMER ] }
         - { path: ^/user, roles: [ ROLE_ADMIN, ROLE_CUSTOMER ] }
 
     role_hierarchy:
